assets/styles.css
* {
    font-family: 'Open Sans', sans-serif;
}

.section {
    background-color: rgb(49, 48, 46);
}

/* CSS animation to make text appear from the left when webpage loads */
@keyframes slideInFromLeft {
    0% {
      transform: translateX(-100%);
    }
    100% {
      transform: translateX(0);
    }
  }

.title {
    background-color: rgb(83, 79, 80);
    color: rgb(228, 213, 213);
    padding: 5%;
    text-align: center;
    animation: 1s ease-out 0s 1 slideInFromLeft;
}

.card {
    color: rgb(228, 213, 213);
}

.card h3, .card h6 {
    margin-bottom: 5%;
}

.card-content {
    padding: 5%;
    text-align: center;
    background-color: rgb(63, 66, 63);
}

p, .github{
    background-color: rgb(83, 79, 80);
    padding: 5%;
    color: rgb(228, 213, 213);

}

/* RESPONSIVENESS */

@media (max-width: 300px) {
    .title {
        font-size: 150%;
    }
}

